--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,2 @@
-github: [carpentries, swcarpentry, datacarpentry, librarycarpentry]
+github: [carpentries]
 custom: ["https://give.communityin.org/TheCarpentries"]
